Verify JDK 26/27 toolchain claims for real: provision, compile, run 245/245
Operator flagged Valhalla/Panama as mandatory and asked to check
technical debt. Found none filed for the toolchain itself. The docs
(java/README.md, docs/panama.md, jdk-toolchain-facts.md) pin absolute
paths (/opt/jdks/jdk-26.0.2, /opt/jdks/jdk-27) with no provisioning
step anywhere in the repo -- pure environmental assumption, and this
session's fresh container had neither.

Paid it down for this container: fetched both from download.java.net
(GA 26.0.2.1, the exact documented 27-jep401ea3+1-1 EA build), verified
java -version matches the docs' claimed build strings exactly, compiled
a value record on JDK 27 (--enable-preview --release 27) and confirmed
Class.isValue() == true, built native/lgj-abi clean, and ran the full
AllTests suite against the fresh JDK 26 + freshly-built .so:
245/245 checks green.

Also found and filed (not silently fixed) a real doc discrepancy:
java/README.md claims exactly 6 [restricted] warnings under -Xlint:all,
all in internal/ffm/{Abi,Downcalls,Engine}.java -- actual count is 7,
the 7th in a test file (AbiContractTest.java:113) outside that list.

TD-LGJ-JDK-TOOLCHAIN-NOT-PORTABLE filed: PAID for this container, OPEN
as a structural gap (no provisioning script commits this for the next
fresh container). No code changes -- board entries are the record.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>